# polymarket-data

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN_FINAL.md  Isolated.ipynb  README.md  REORGANIZATION_PLAN.md  TEST_RESULTS.md  UPDOWN_PIPELINE_PLAN.md  UPDOWN_RESEARCH_FINDINGS.md  fetch_wallet_goldsky.py  pyproject.toml  reorganize.py  research_updown_markets.py  update_all.py
analysis/: __init__.py  bucketing.py  classify_crypto_markets.py  config.py  extract_polymarket_data.py  pattern_analyzer.py  trade_enricher.py
backtrader_plotting/bokeh/: bokeh.py
data/: updown_markets.csv  updown_markets_sample.json
data/.checkpoints/: markets.done
data/raw/: README.md
docs/: analysis.md  data_schema.md  install.md  pipeline_stages.md
notebooks/: Example 1 Trader Analysis.ipynb  Example 2 Backtest.ipynb  GETTING_STARTED.md  README.md  backtest_analysis.py  backtest_strategy.py  setup_zed_repl.sh  trader_analysis.py  verify_binance_data.ipynb
pipelines/: README.md
poly_utils/: __init__.py  utils.py
scripts/: README.md  aggregate_12gb.py  aggregate_partial.py  compare_data_completeness.py  find_missing_dates.py  list_missing_ranges.py  monitor_markets.py  process_wallet.py  run_fetch.sh  run_fetch_10_chunks.sh  run_fill_batch1.sh  run_fill_batch2.sh  run_fill_gaps.sh  verify_complete_data.py
tests/: test_market_discovery.py
updown_pipeline/: README.md  __init__.py  checkpoint.py  config.py  fetch_clob_trades.py  fetch_historical_trades.py  integrate_binance.py  market_discovery.py  run_pipeline.py  stream_live.py
utils/: README.md
(+33 files in other folders)
